<resources>

    <string name="app_name">MyController</string>
    <string name="title_control">Kontrollelemente</string>
    <string name="title_context_list">MyController</string>
    
    <string name="allRooms">Alle Räume</string>
    <string name="dining">Esszimmer</string>
    <string name="lounge">Wohnzimmer</string>
    <string name="kitchen">Küche</string>
    <string name="hall">Flur</string>
    <string name="bedroom">Schlafzimmer</string>
    
    <string name="light">Licht</string>
    <string name="heating">Heizung</string>
    <string name="window">Fenster</string>
    <string name="blinds">Rollos</string>
    <string name="curtain">Gardienen</string>
    
    
    <string name="LightControlTitel">Licht</string>
    <string name="ColorLightTitel">Farbauswahl</string>
    <string name="ColorCommit">Übernehmen</string>
    <string name="whiteLightTitel">Licht</string>
    <string name="whiteLightDim">Dimmen</string>

    <string name="ColorPicker">Neue Farbe wählen</string>
    <string name="SaveColor">Farbe speichern</string>

    <string name="on">Ein</string>
    <string name="off">Aus</string>
    
    <string name="open">öffnen</string>
    <string name="close">schließen</string>

    <string name="heatingTitel">Heizung</string>
    <string name="heatingColdText">kalt</string>
    <string name="heatingWarmText">warm</string>

    <string name="curtainstitel">Gardienen</string>
    <string name="curtainsOpen">auf</string>
	<string name="curtainsClose">zu</string>

    <string name="blindsTitel">Rollos</string>
    <string name="blindsOpen">auf</string>
    <string name="blindsClose">zu</string>
    <string name="ColorLightOff">Farblicht aus</string>


</resources>