<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/HeatingTitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heatingTitel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="30dp" android:baselineAligned="false">
        
        

	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="match_parent"
	        android:orientation="horizontal">
	        
	        <TextView
	            android:id="@+id/Heating_ColdText"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/heatingColdText"
                android:layout_gravity="center"/>
            <SeekBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/HeatingSlider"
                    android:layout_gravity="center"
                    android:minWidth="200dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heatingWarmText"
                    android:id="@+id/heatingWarmText"
                    android:layout_gravity="center"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>