<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <TextView
            android:id="@+id/blindsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blinds" android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="30dp" android:baselineAligned="false">



        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/blindsOpen"
                    android:id="@+id/blindsOpen"
                    android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/blindsClose"
                    android:id="@+id/blindsClose"
                    android:layout_gravity="center"/>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>


