<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
            android:id="@+id/curtainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curtain" android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="30dp" android:baselineAligned="false">


        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <Button
                    android:id="@+id/CurtainsOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:layout_gravity="center"
                    android:text="@string/curtainsOpen"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/CurtainsClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:layout_gravity="center"
                    android:text="@string/curtainsClose"/>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>









